# memoristorCursor

./: .fastlane.yaml  .gitignore  Cargo.toml  README.md
.cursor/rules/: fastlane-governance.mdc
.github/: CODEOWNERS  pull_request_template.md  risk-config.json
.github/scripts/: classify_risk.py  fastlane_config.py
.github/workflows/: fastlane-governance.yml
crates/aethel_mlx_runtime/: Cargo.toml
crates/aethel_mlx_runtime/src/: coreml_backend.rs  inference_executor.rs  kv_cache.rs  lib.rs  m5_compute.rs  mlx_backend.rs  route_engine.rs
crates/memristor/: Cargo.toml
crates/memristor/benches/: memristor_throughput.rs
crates/memristor/examples/: windsurf_cascade.rs
crates/memristor/src/: lib.rs  memristive_relation.rs  memristive_relation_use_cases.rs  resonance_class.rs  resonance_class_use_cases.rs
crates/memristor/src/memristor/: cell.rs  crossbar.rs  forward_aarch64.rs  mod.rs
crates/memristor/src/services/: mod.rs  vchip_api.rs
crates/memristor_metal/: Cargo.toml
crates/memristor_metal/examples/: compare_cpu_metal.rs  metal_smoke.rs
crates/memristor_metal/src/: lib.rs
docs/: EXECUTION_PLAN.md  M5_APPLE_SILICON.md  memristive_relation_audit.md  memristive_relation_fmea.md  memristive_relation_spec.md  resonance_class_audit.md  resonance_class_fmea.md
