[package]
name = "aethel_mlx_runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["memristor-kv", "memristor-routing", "memristor-metal"]
## KV-cache bookkeeping and optional decompress API (Phase 2).
memristor-kv = []
## RouteDecision + InferenceExecutor scaffold (Phase 3 surface, optional slim builds).
memristor-routing = []
## Forward Rayon row-parallelism in `memristor` (large crossbars, CPU).
memristor-parallel = ["memristor/memristor-parallel"]
## macOS: `memristor_metal` + Auto-Routing großer Crossbars / Cascade auf die GPU.
memristor-metal = ["dep:memristor_metal"]

[dependencies]
memristor = { path = "../memristor", default-features = false, features = ["memristor-sim"] }
memristor_metal = { path = "../memristor_metal", optional = true }
