[package]
name = "memristor"
version = "0.1.0"
edition = "2021"
description = "Compile-safe memristor simulation primitives"

[features]
default = ["memristor-sim"]
## Core simulation path (kept for explicit downstream `default-features = false`).
memristor-sim = []
## Criterion benchmarks (`cargo bench -p memristor --features memristor-bench`).
memristor-bench = []
## Reserved: extended routing / cascade experiments.
memristor-routing = []
## Row-parallel `Crossbar::forward` via Rayon (CPU, large n).
memristor-parallel = ["dep:rayon"]

[dependencies]
rand = "0.8"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memristor_throughput"
harness = false
required-features = ["memristor-bench"]
